# goOSe

./: .gitignore  Cargo.toml  LICENCE-MIT  Makefile  NOTES  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  TODO  build.rs  flake.nix  gen_cargo.sh  goose.nix  shell.nix  virt.dtb  virt.dts  x86_64_goose.json
.cargo/: config
.github/workflows/: clippy.yml  doc.yml  format.yml  kunit.yml  test.yml
aarch64_qemuvirt/: Cargo.toml  build.rs
aarch64_qemuvirt/.cargo/: config  config.toml
aarch64_qemuvirt/src/: aarch64_qemuvirt.ld  main.rs
boards/: arm32_stm32-nucleo-f401re.conf  generic_qemuvirt.ld  riscv64_qemuvirt.conf  riscv64_qemuvirt.ld
boards/riscv64/qemu_virt/: config.toml
drivers/: Cargo.toml
drivers/src/: gicv2.rs  init_cell.rs  lib.rs  ns16550.rs  null_uart.rs  pl011.rs  plic.rs  qemuexit.rs
fixtures/: Makefile
hal_aarch64/: Cargo.toml
hal_aarch64/src/: cpu.rs  exceptions.S  irq.rs  lib.rs
hal_aarch64/src/devices/: gicv2.rs  mod.rs
hal_aarch64/src/mm/: mod.rs  pgt48.rs
hal_core/: Cargo.toml
hal_core/src/: fake_once_lock.rs  hal.rs  lib.rs  mm.rs  once_lock.rs  reentrant_spinlock.rs
hal_riscv64/: Cargo.toml
hal_riscv64/src/: context.rs  cpu.rs  irq.rs  lib.rs  plic.rs  registers.rs
hal_riscv64/src/mm/: mod.rs  sv39.rs
kernel/: Cargo.toml  README.md  build.rs
kernel/boards/: arm32_stm32-nucleo-f401re.conf  arm32_stm32-nucleo-f401re.ld  arm32_template.conf  riscv64_qemuvirt.ld
kernel/fixtures/: Makefile  small.S
kernel/src/: aarch64_qemuvirt_main.rs  device_tree.rs  driver_manager.rs  error.rs  generic_main.rs  gicv2.rs  globals.rs  irq.rs  kernel_console.rs  kernel_tests.rs  lib.rs  lock.rs  paging.rs  panic.rs  process.rs  riscv64_qemuvirt_main.rs  tests.rs  utils.rs
kernel/src/arch/: aarch64.rs  aarch64_exceptions.S  mod.rs
kernel/src/arch/aarch64/: exceptions.S  mod.rs  pgt48.rs
kernel/src/arch/riscv64/: interrupt.S  interrupts.rs  mod.rs  sv39.rs
kernel/src/arch_mem/: mod.rs
kernel/src/drivers/: gicv2.rs  mod.rs  ns16550.rs  pl011.rs  plic.rs  qemuexit.rs
kernel/src/executable/: elf.rs
kernel/src/interrupt_manager/: mod.rs
kernel/src/mm/: binary_buddy_allocator.rs  mod.rs  physical_memory_manager.rs
kernel/src/utils/: init_once.rs  mod.rs
riscv64_qemuvirt/: Cargo.toml  build.rs
riscv64_qemuvirt/.cargo/: config  config.toml
riscv64_qemuvirt/src/: main.rs  riscv64_qemuvirt.ld
src/: aarch64_qemuvirt_main.rs  device_tree.rs  kernel_console.rs  kernel_serial.rs  kernel_tests.rs  link.lds  main.rs  panic_handler.rs  riscv64_qemuvirt_main.rs
src/allocator/: mod.rs
src/arch/: aarch64.rs  arm32.rs  mod.rs
src/arch/riscv/: mod.rs
src/arch/riscv64/: exceptions.rs  interrupts.rs  link.lds  mmu.rs  mod.rs  registers.rs  sv39.rs  trap.rs
src/arch/x86_64/: link.lds  mod.rs
src/arch_mem/: mod.rs
src/asm_wrappers/: mod.rs
src/drivers/: mod.rs  ns16550.rs  pl011.rs  plic.rs
src/executable/: elf.rs
src/gdt/: mod.rs
src/interrupt_manager/: mod.rs
src/mm/: first_fit_page_allocator.rs  memory_management.rs  mod.rs  page_alloc.rs  page_allocator.rs  page_manager.rs  paging.rs  physical_memory_manager.rs  simple_page_allocator.rs
src/panic/: mod.rs
src/process/: mod.rs
src/serial/: assembly.rs  mod.rs
src/spin_lock/: mod.rs
src/utest/: mod.rs
src/utils/: mod.rs
src/vga/: attribute.rs  buffer.rs  cell.rs  macros.rs  mod.rs  write.rs
tests/: Cargo.toml
tests/src/: main.rs
tests/tests_bin/: Cargo.toml
tests/tests_bin/.cargo/: config
tools/: fw_jump.elf
utils/: Cargo.toml
utils/src/: init_once.rs  lib.rs
