[package]
name = "goose"
version = "0.1.0"
authors = ["cohenarthur <arthur.cohen@epita.fr>", "Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>", "Martin \"n1tram1\" Schmidt <martin.schmidt@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "^0.2"
cfg-if = "^1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
