[package]
name = "goose"
version = "0.1.0"
authors = ["cohenarthur <arthur.cohen@epita.fr>", "Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>", "Martin \"n1tram1\" Schmidt <martin.schmidt@epita.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "^1.0"
modular-bitfield = "0.11"
bitflags = "1.3.2"

[dev-dependencies]
qemu-exit = "2.0"

[target.thumbv7em-none-eabihf.dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
