[package]
name = "aarch64_qemuvirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
tests = { path = "../tests", artifact = "bin" }
align-data = "0.1.0"

cortex-a = "7.4.0"
