[package]
name = "aarch64_qemuvirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
cortex-a = "8.1"
tock-registers = "0.7.0"
log = "0.4"

[features]
launch_tests = []
