[package]
name = "gagelen"
version = "0.0.1"
authors = ["cohenarthur <arthur.cohen@epita.fr>", "Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>", "Martin \"n1tram1\" Schmidt <martin.schmidt@epita.fr>"]
edition = "2021"

[dependencies]
utils = { path = "../utils" }
drivers = { path = "../drivers" }
cfg-if = "1.0"
static_assertions = "1.1"
once_cell = { version = "1.17", default-features = false }
modular-bitfield = "0.11"
bitflags = "2.1"
fdt = "0.1"
spin = "0.9"
goblin = { version = "0.6", default-features = false, features = ["elf64"] }

[dev-dependencies]

[target.riscv64gc-unknown-none-elf.dependencies]
sbi = "0.2"
riscv = "0.10"

[target.aarch64-unknown-none.dependencies]
tock-registers = "0.8"
cortex-a = "8.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
aarch64_pgt48oa = []
riscv64_sv39 = []
arm = []
