[package]
name = "kernel"
version = "0.1.0"
authors = ["cohenarthur <arthur.cohen@epita.fr>", "Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>", "Martin \"n1tram1\" Schmidt <martin.schmidt@epita.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
static_assertions = "1.1"
modular-bitfield = "0.11"
bitflags = "2.1"
fdt = "0.1"
spin = "0.9"
goblin = { version = "0.6", default-features = false, features = ["elf64"] }
qemu-exit = "3.0"
hal_core = { path = "../hal_core" }
arrayvec = { version = "0.7", default-features = false }
align-data = "0.1"
log = "0.4"
tests = { path = "../tests", artifact = "bin" }

[dev-dependencies]

[target.riscv64gc-unknown-none-elf.dependencies]
sbi = "0.2"
hal_riscv64 = { path = "../hal_riscv64" }

[target.aarch64-unknown-none.dependencies]
tock-registers = "0.8"
cortex-a = "8.1"
hal_aarch64 = { path = "../hal_aarch64" }

[features]
aarch64_pgt48oa = []
riscv64_sv39 = []
arm = []
